1.9.13
Worldmap:
  * FIX: worldmap textbox visibility per zoom level
  * Configurable OpenStreetMap tile server URL (worldmap_tiles_url)
  * Feature: dim openstreetmap colors

1.9.12
Core:
  * FIX: Allow "*" character to be part of backend dbpass values
  * Multisite Snapin: Reworked data export API to snapin. The new API is
  compatible with Checkmk 1.6b2 and newer.

Frontend
  * FIX: Fixed incompatibility with PHP 7.2 (count(STRING)) when creating roles

Geomap:
  * Improved error handling of CSV lines with less than 4 fields

1.9.11
Frontend
  * FIX: Weathermap lines now respect the configured error colors
  * FIX: Fixed wrapping of long map names in sidebar

1.9.10
Frontend
  * FIX: Network error popups are now shown when an error occurs and hidden again
         automatically when a subsequent call succeeds

1.9.9
Frontend:
  * FIX: Fixed possible "Cannot read property 'conf' ... Line 4383" error when
         trying to interact with the map while it is initially loading
  * FIX: Fixed incompatibility with PHP 7.2 when creating new users
  * FIX: Fixed loading sounds when using non standard HTTP/HTTPS ports
  * FIX: Fixed "JavaScript Error : checkHideMenu" on worldmaps when header is
         disabled

1.9.8
Frontend:
  * FIX: Fixed incompatibility with PHP 7.2 in Dwoo 3rd party code
  * FIX: Fixed outdated Monitoring portal link in header menu

Automap:
  * FIX: Fixed automaps filter_group when using ndomy/pgsql backend

Installer:
  * FIX: Prevent error when trying to replace old map options and no map exists

1.9.7
Frontend:
  * FIX: Fixed object sort by state regression in 1.9.6

1.9.6
Core:
  * Dynamic map objects can now be sorted by state (Using the new map global
    settings dynmap_sort and dynmap_order)
  * FIX: Improved error handling when trying to use aggregation objects with
         backends that don't support these object types
  * FIX: Fixed "A non-numeric value encountered" when creating new automaps