@@ -73,6 +73,11 @@
 ;
 ; Public or private mirror of OpenStreetMap tiles server
 ;worldmap_tiles_url="https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png"
+;worldmap_tiles_attribution="&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>"
+;
+; Secondary "satellite" tiles server
+;worldmap_satellite_tiles_url=""
+;worldmap_satellite_tiles_attribution=""
 ;
 ; In some cases NagVis needs to open connections to the internet. The cases are:
 ; - The new geomap needs access to openstreetmap webservices to be able to fetch
