@@ -1,8 +1,9 @@
 1.9.13
 Worldmap:
-  * FIX: worldmap textbox visibility per zoom level
-  * Configurable OpenStreetMap tile server URL (worldmap_tiles_url)
+  * Configurable OpenStreetMap tile server URL (worldmap_tiles_{url,attribution})
   * Feature: dim openstreetmap colors
+  * Optional 2nd map layer (satellite imagery)
+  * FIX: worldmap textbox visibility per zoom level
 
 1.9.12
 Core:
